Made drop-down indicator on drop-down datalists visible always. Addresses issue #26

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -45,3 +45,7 @@
 .navbar-dark{
   margin-bottom: 50px;
 }
+
+input::-webkit-calendar-picker-indicator {
+  opacity: 100;
+}
